# Jinja2C

./: CMakeLists.txt  README.md
examples/: example_with_env.c  simple_example.c
include/: error_info_wrap.h  filesystem_handler_wrap.h  jinja2cpp_wrap.h  result_wrap.h  template_env_wrap.h  template_wrap.h  value_wrap.h
src/: error_info_wrap.cpp  filesystem_handler_wrap.cpp  result_wrap.cpp  template_env_wrap.cpp  template_wrap.cpp  value_wrap.cpp
